<resources>
    <string name="app_name">அருள்வாக்கு பாடல்கள்</string>
    <string name="about_1">Arulvakku is the first in the internet media that serves the Tamil speaking Christian community across the world, by giving Holy Bible online, Online Radio and Online Bible Study. Easy Bible reading and searching, receiving daily emails with daily liturgical readings and reflections both in English and Tamil, Rosaries and prayers, videos and hymns are some of the resources available online at arulvakku.com for Tamil Christians.</string>
    <string name="about_2">This mobile app is a small precursor to the immense possibilities of digitizing your EHS practices including Incident Lifecycle Management, Health Register, Work Permit Systems, Safety Walks, Document Management System, Audits and Inspections, Safety Training and Compliance Calendar, and more. We look forward to hearing from you and help integrate Track EHS within your enterprise framework.</string>
    <string name="about_4">To know more,</string>
    <string name="about_6">arulvakkudevelopment@gmail.com</string>
    <string name="About">About</string>
    <string name="have_question">Have a question?  Write to us.</string>
    <string name="visit">Visit</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="request_songs">Request Songs</string>


    <string name="url">https://www.arulvakku.com/</string>

    // Needs to be changed
    <string name="email">arulvakkudevteam@gmail.com</string>
    <string name="base_url">https://www.arulvakku.com/</string>
    <string name="send_to">Send to</string>
    <string name="display_settings">Display Settings</string>
    <string name="arulvaaku_paadal">அருள்வாக்கு பாடல்கள்</string>
    <string name="www_arulvakku_com">www.arulvakku.com</string>
    <string name="name">பெயர்</string>
    <string name="request_song">பாடலின் விவரங்களை உள்ளிடுக</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>